# elftest

./: CMakeLists.txt  elfdeps.c  main.c
